# job-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  system_prompt.py
agent/: agent.py
mcp-servers/: server_job_listings.py
mcp_client/: mcp_client.py
mcp_servers/: server_job_listings.py
